# uk-property-cli

./: .gitignore  PLAN.md  README.md  SKILL.md  briefing.py  compare.py  config.py  dedupe.py  fetch.sh  filter.py  preferences.json  pyproject.toml  score.py
parsers/: base.py  espc.py  rightmove.py  zoopla.py
reviewsforagents/: package.json  tsconfig.json  wrangler.toml
reviewsforagents/spec/: v0.1.md
reviewsforagents/src/: cache.ts  router.ts  types.ts  worker.ts
reviewsforagents/src/compress/: ecom.ts  index.ts  prompts.ts
reviewsforagents/src/detect/: index.ts  shopify.ts
reviewsforagents/src/extract/: firecrawl.ts  index.ts  judgeme.ts
reviewsforagents/src/format/: detailed.ts  json.ts  minified.ts  standard.ts
tests/: test_base.py  test_compare.py  test_config.py  test_dedupe.py  test_filter.py  test_score.py
