[project]
name = "uk-property-cli"
version = "1.0.0"
description = "CLI tool that aggregates property listings from UK portals for AI agents"
requires-python = ">=3.10"
license = "MIT"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
